cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
project(tictactorch)
find_package(Torch REQUIRED)
add_executable(tictactoetest tictactoe.cpp tictactoe_main.cpp)
add_executable(tictactorch tictactoe.cpp dataClasses.cpp torch_main.cpp)
set(EXECUTABLES tictactoetest tictactorch)
foreach(EXEC ${EXECUTABLES})
				target_compile_options(${EXEC} PRIVATE)
				target_link_libraries(${EXEC} "${TORCH_LIBRARIES}")
				set_property(TARGET ${EXEC} PROPERTY CXX_STANDARD 17)
endforeach()
